# poetry-tasks-demo

./: pyproject.toml  tasks.py
poetry_tasks/: __init__.py
